k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
  labels:
    app: backstage
spec:
  type: ClusterIP
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: 7007
